增加会员等级及成长值mock

--- a/totest/templates/crmMock.html
+++ b/totest/templates/crmMock.html
@@ -84,6 +84,16 @@
                 width: 100,
                 editor: 'textbox'
             }, {
+                field: 'growthlevel',
+                title: 'growthlevel',
+                width: 100,
+                editor: 'textbox'
+            }, {
+                field: 'growthvalue',
+                title: 'growthvalue',
+                width: 100,
+                editor: 'textbox'
+            }, {
                 field: 'crmcode',
                 title: 'crmcode',
                 width: 100,
@@ -239,6 +249,16 @@
                         width: 100,
                         editor: 'textbox'
                     }, {
+                        field: 'growthlevel',
+                        title: 'growthlevel',
+                        width: 100,
+                        editor: 'textbox'
+                    }, {
+                        field: 'growthvalue',
+                        title: 'growthvalue',
+                        width: 100,
+                        editor: 'textbox'
+                    }, {
                         field: 'crmcode',
                         title: 'crmcode',
                         width: 100,
@@ -275,6 +295,11 @@
                     }, {
                         field: 'paylog',
                         title: 'paylog',
+                        width: 100,
+                        editor: 'textbox'
+                    }, {
+                        field: 'growthlevel',
+                        title: 'growthlevel',
                         width: 100,
                         editor: 'textbox'
                     }, {
