增加会员等级及成长值mock

--- a/totest/templates/crmMock.html
+++ b/totest/templates/crmMock.html
@@ -303,6 +303,11 @@
                         width: 100,
                         editor: 'textbox'
                     }, {
+                        field: 'growthvalue',
+                        title: 'growthvalue',
+                        width: 100,
+                        editor: 'textbox'
+                    }, {
                         field: 'crmcode',
                         title: 'crmcode',
                         width: 100,
